# lsm6ds3tr

./: .gitlab-ci.yml  .hadolint.yml  Cargo.toml  Dockerfile  license  readme.md
ci/: build  cargo-sort  check  clippy  doc  format  pipeline  test  udeps
ci/jobs/: build  check  doc  test
src/: consts.rs  data.rs  lib.rs  lsm6ds3tr.rs  measurements.rs  registers.rs
src/interface/: i2c.rs  mod.rs  spi.rs
src/registers/: addresses.rs  ctrl1_xl.rs  ctrl2_g.rs  ctrl3_c.rs  ctrl4_c.rs  drdy_pulse_cfg_g.rs  free_fall.rs  int1_ctrl.rs  int2_ctrl.rs  int_dur2.rs  md1_cfg.rs  md2_cfg.rs  mod.rs  tap_cfg.rs  tap_src.rs  tap_ths_6d.rs  wake_up_dur.rs  wake_up_src.rs  wake_up_ths.rs
src/settings/: accel.rs  gyro.rs  interrupts.rs  irq.rs  mod.rs
