[package]
name = "lsm6ds3tr"
version = "0.2.0"
edition = "2021"
description = "LSM6DS3TR 6-axis (DOF) IMU accelerometer & gyroscope rust driver library"
authors = ["Marcin Czekajło <mtczekajlo@gmail.com>"]
repository = "https://gitlab.com/mtczekajlo/lsm6ds3tr-rs"
readme = "readme.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }
embedded-hal = "0.2.7"

[features]
default = []
defmt = ["dep:defmt"]
